<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp" >
    <Button
        style="@style/MainActivityButtonStyle"
        android:id="@+id/btn_voca"
        android:text="@string/button_name_voca"/>

    <Button
        style="@style/MainActivityButtonStyle"
        android:id="@+id/btn_input_voca"
        android:text="@string/button_name_input_voca"
        android:layout_marginTop="50dp" />

    <Button
        style="@style/MainActivityButtonStyle"
        android:id="@+id/btn_setting"
        android:text="@string/button_name_setting"
        android:layout_marginTop="50dp"/>
</LinearLayout>